# ConanCatch2IssueWithCxx17

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
